--- a/style.css
+++ b/style.css
@@ -4,12 +4,12 @@
 }
 
 body {
-    font: 12px "Helvetica", sans-serif;
+    font: 12px "Lato", sans-serif;
     background: url(images/bg.png);
 }
 h1, h2 {
-    color: #00d4fa;
-    font: 30px "Helvetica", sans-serif;
+    color: #fa9600;
+    font: 30px "Lato", sans-serif;
     margin: 0 0 10px 0;
 }
 #page-wrap {
@@ -29,30 +29,30 @@ h1, h2 {
     padding: 20px;
     background: white;
 }
-#chat-area span {
-    color: white;
-    background: #333;
-    padding: 4px 8px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 8px;
-    margin: 0 5px 0 0;
-}
-#chat-area p {
-    padding: 8px 0;
-    border-bottom: 1px solid #ccc;
-}
+    #chat-area span {
+        color: white;
+        background: #333;
+        padding: 4px 8px;
+        -moz-border-radius: 5px;
+        -webkit-border-radius: 8px;
+        margin: 0 5px 0 0;
+    }
+    #chat-area p {
+        padding: 8px 0;
+        border-bottom: 1px solid #ccc;
+    }
 
 #name-area {
     position: absolute;
     top: 12px;
     right: 0;
     color: white;
-    font: bold 12px "Helvetica", sans-serif;
+    font: bold 12px "Lato", sans-serif;
     text-align: right;
 }
-#name-area span {
-    color: #00d4fa;
-}
+    #name-area span {
+        color: #fa9600;
+    }
 
 
 
@@ -60,7 +60,8 @@ h1, h2 {
     float: left;
     color: white;
     padding-top: 27px;
-    font-size: 14px;
+    font: "Lato", sans-serif;
+    font-size: 18px;
 }
 #sendie {
     border: 3px solid #999;
@@ -77,10 +78,11 @@ h1, h2 {
     padding: 20px;
     background: white;
 }
-#room-select option {
-    padding: 8px;
-    font-size: 15px;
-}
+    #room-select option {
+        padding: 8px;
+        font-size: 15px;
+    }
+
 #section label, #name-input {
     float: left;
     color: white;
@@ -90,6 +92,6 @@ h1, h2 {
 #userid {
     height: 30px;
 }
-#userid p {
-    font-size: 14px;
-}
+    #userid p {
+        font-size: 14px;
+    }
