--- a/style.css
+++ b/style.css
@@ -88,15 +88,42 @@ h1, h2 {
         font-size: 15px;
     }
 
-#section label, #name-input {
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+.dropdown-content {
+    display: none;
+    position: absolute;
     float: left;
+    background-color: #9b9b9b;
+}
+
+#section label {
     color: white;
     padding: 10px;
-    font-size: 20px;
+    font-size: 16px;
 }
-#userid {
+#userid, #userpass, #userpass-repeat {
     height: 30px;
+    margin: 1px;
 }
-    #userid p {
+    #userid p, #userpass p {
         font-size: 14px;
     }
+
+#new-user-form p {
+    color: white;
+    font-size: 14px;
+}
+
+form a {
+    color: #fa9600;
+}
+
+#send-button, #submit, #emote-button {
+    border: 2px solid #666;
+    padding: 5px;
+    background: #333;
+    color: white;
+}
