--- a/style.css
+++ b/style.css
@@ -5,18 +5,31 @@
 
 body {
     font: 12px "Lato", sans-serif;
-    background: url(images/bg.png);
+    background: #525949;
 }
 h1, h2 {
-    color: #fa9600;
+    color: #964448;
     font: 30px "Lato", sans-serif;
     margin: 0 0 10px 0;
+    text-shadow: 2px 2px 5px #5D464C;
+}
+#room-banner {
+    width: 360px;
+    filter: brightness(150%);
+    filter: drop-shadow(5px 5px 5px #314659);
 }
 #page-wrap {
     width: 500px;
     margin: 30px auto;
     position: relative;
 }
+#name-input>label {
+    display: inline-block;
+    float: left;
+    clear: left;
+    text-align: right;
+}
+
 
 #chat-wrap {
     border: 1px solid #eee;
@@ -56,7 +69,7 @@ h1, h2 {
     text-align: right;
 }
     #name-area span {
-        color: #fa9600;
+        color: #964448;
     }
 
 
@@ -118,8 +131,12 @@ h1, h2 {
 }
 
 form a {
-    color: #fa9600;
+    color: #964448;
+    font-size: 14px;
 }
+    form a:hover {
+        text-shadow: 1px 1px 3px #5D464C;
+    }
 
 #send-button, #submit, #emote-button {
     border: 2px solid #666;
@@ -127,3 +144,6 @@ form a {
     background: #333;
     color: white;
 }
+    #send-button:hover, #submit:hover, #emote-button:hover {
+        filter: drop-shadow(1px 1px 4px #C0BEB1);
+    }
